# UNI_NAMES_APP_PRODUCTION

./: .gitignore  README.md  auto_updater.py  build_offline.py  build_production.py  main_app.py  pyproject.toml  requirements.txt  run_app.py  version.py
configs/: app_config.json
debugging/: README_DEBUG.md
debugging/configs/: debug_settings.json
debugging/modules/: 01_doctor_names_cleaner.md
doctor_cleaner/: __init__.py  cli.py  config.py  pipeline.py
src/uni_names/: __init__.py  clean_names_app_qt.py  dashboard_app_qt.py  light_style.qss  reference_search.py  style.qss
